fixes wrong line break of call to action on small window size

--- a/css/styles.css
+++ b/css/styles.css
@@ -11487,49 +11487,49 @@ textarea.form-control-lg {
   border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important; }
 
 @font-face {
-  font-family: "Chivo-Light";
+  font-family: "text-block";
   src: url("../fonts/Chivo-Light.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: "Chivo-Light";
+  font-family: "text-block";
   src: url("../fonts/Chivo-Regular.ttf") format("truetype");
   font-weight: bold;
   font-style: normal; }
 
 @font-face {
-  font-family: "Chivo-Light";
+  font-family: "text-block";
   src: url("../fonts/Chivo-LightItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic; }
 
 @font-face {
-  font-family: "Chivo-Light";
+  font-family: "text-block";
   src: url("../fonts/Chivo-Italic.ttf") format("truetype");
   font-weight: bold;
   font-style: italic; }
 
 @font-face {
-  font-family: "Chivo-Regular";
+  font-family: "titles";
   src: url("../fonts/Chivo-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: "Chivo-Regular";
+  font-family: "titles";
   src: url("../fonts/Chivo-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal; }
 
 @font-face {
-  font-family: "Chivo-Regular";
+  font-family: "titles";
   src: url("../fonts/Chivo-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic; }
 
 @font-face {
-  font-family: "Chivo-Regular";
+  font-family: "titles";
   src: url("../fonts/Chivo-BoldItalic.ttf") format("truetype");
   font-weight: bold;
   font-style: italic; }
@@ -11540,7 +11540,7 @@ html {
 body {
   min-width: 360px;
   min-height: 100vh;
-  font-family: "Chivo-Light";
+  font-family: "text-block";
   color: #121e3d;
   background-color: white;
   text-decoration-thickness: 0.4rem; }
@@ -11554,7 +11554,7 @@ body a {
   font-size: inherit; }
 
 .sg-navbar {
-  font-family: "Chivo-Regular";
+  font-family: "titles";
   color: #121e3d;
   background-color: white; }
 
@@ -11578,7 +11578,7 @@ body a {
   white-space: nowrap; }
 
 h2, .h2 {
-  font-family: "Chivo-Regular";
+  font-family: "titles";
   font-size: 4rem; }
 
 .sg-single-page {
